--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@
 
 **/ignore_files/
 
-tokenizers/
-data/output/codepretok/
+/tokenizers/
+datasets/avatar/
+data/output/cpp/
 
 # Distribution / packaging
 .Python
@@ -22,7 +23,6 @@ lib/
 lib64/
 parts/
 sdist/
-var/
 wheels/
 share/python-wheels/
 *.egg-info/
